package com.ejemplo.tramitacion.dominio.saga.paso1;

/** Referencia que produce el PASO1 al completarse. */
public record RefPaso1(String valor) {}
