@startuml 15-clases-dominio-saga-principal
title Dominio — saga principal (business.sagas.dominio.sagaprincipal)
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

abstract class "Proceso<EstadoSagaPrincipal>\n(business.ordermanager.dominio — ver 14)" as Proceso {
  ciclo de vida común: comandoActual / aplicarYAvanzar /
  terminada / marcarPasoActualOkManual
}

package "dominio.sagaprincipal" {
  class SagaPrincipal <<@ValueObject>> {
    +{static} TIPO : TipoOrden = new TipoOrden("PRINCIPAL")
    -ctx : ContextoTramitacion
    +{static} crear(id, externalId, datosNegocioId) : SagaPrincipal
    +{static} rehidratar(id, externalId, ctx, estado, auditoria)
    +tipo() : TipoOrden  «TIPO»
    +comandoActual() : ComandoPasoPrincipal  «switch(estado)»
    +aplicarYAvanzar(ResultadoPasoPrincipal) : SagaPrincipal  «ctx' = ctx.aplicar(r);\ndevuelve instancia nueva avanzada»
    +terminada() : boolean  «TERMINADA || CANCELADA»
    +marcarPasoActualOkManual(quien, justificacion, datos) : SagaPrincipal
    +contextosArranque() : List<ContextoArranque>  «al llegar a TERMINADA»
    +esCancelable() : boolean  «estado < PASO7_HECHO»
    +cancelar(quien, motivo) : SagaPrincipal
    +compensacionCompletada() : SagaPrincipal
    +contexto() : ContextoTramitacion
  }
  note right of SagaPrincipal
    PASO1..PASO8 síncronos. TIPO es la constante que registra este
    tipo de orden ante el motor (antes, el enum cerrado TipoSaga.
    PRINCIPAL) — la usan ServicioSagaPrincipal.tipo() (ver 18) y
    SoporteSagaPrincipal (ver 23). Punto de no retorno: PASO7_HECHO
    ya no es cancelable (PuntoNoRetornoSuperadoException, definida
    en este mismo paquete). cancelar(): TERMINADA->
    OrdenYaCompletadaException; COMPENSAR_*/CANCELADA-> no-op
    (devuelve this, misma instancia); si no, según el estado,
    COMPENSAR_PASO2/COMPENSAR_PASO1/CANCELADA (instancia nueva).
    Al llegar a TERMINADA (tras PASO8), la capa de aplicación crea 3
    agregados hijos (ver 03) — contextosArranque() los recorta con
    exactamente lo que cada secundaria necesita. VO inmutable (ver
    14): cada transición devuelve una instancia nueva; el llamante
    (ServicioSagaPrincipal/ServicioCancelarTramitacion, ver 18)
    hace orden.reemplazarProceso(nuevaSaga, ahora) antes de guardar.
  end note

  enum EstadoSagaPrincipal {
    INICIAL
    PASO1_HECHO .. PASO7_HECHO
    TERMINADA
    COMPENSAR_PASO2
    COMPENSAR_PASO1
    CANCELADA
  }

  interface ComandoPasoPrincipal <<sealed>> {
    EjecutarPaso1(externalId, datosNegocioId)
    EjecutarPaso2(datosNegocioId, refPaso1)
    EjecutarPaso3(externalId, refPaso2)
    EjecutarPaso4(refPaso1, refPaso2)
    EjecutarPaso5(refPaso4)
    EjecutarPaso6(refPaso5)
    EjecutarPaso7(refPaso5, datosNegocioId)
    EjecutarPaso8(externalId, refPaso7)
    CompensarPaso1(refPaso1)
    CompensarPaso2(refPaso2)
  }
  interface ResultadoPasoPrincipal <<sealed>> {
    ResultadoPaso1(ref) .. ResultadoPaso8(ref)
  }
  class ContextoTramitacion <<@ValueObject>> {
    datosNegocioId : DatosNegocioId
    refPaso1 .. refPaso8 : RefPasoN
    +{static} inicial(datosNegocioId)
    +{static} rehidratar(...)
    ~aplicar(ResultadoPasoPrincipal r) : ContextoTramitacion  «inmutable»
  }
  class "RefPaso2, RefPaso3, RefPaso4,\nRefPaso6, RefPaso8" as RefsPropias <<@ValueObject>>
  class PuntoNoRetornoSuperadoException <<RuntimeException>> {
    (OrdenId id)
  }
}

class "RefPaso1, RefPaso5, RefPaso7\n(business.sagas.dominio.comun — ver 25)" as RefsComunes <<@ValueObject>>
class "DatosNegocioId\n(business.sagas.dominio.datosnegocio — ver 26)" as DatosNegocioIdRef <<@ValueObject>>
class "OrdenYaCompletadaException\n(business.ordermanager.dominio — ver 14)" as OrdenYaCompletada <<RuntimeException>>

Proceso <|-down- SagaPrincipal
SagaPrincipal *-- ContextoTramitacion : ctx
SagaPrincipal ..> ComandoPasoPrincipal : comandoActual()
SagaPrincipal ..> ResultadoPasoPrincipal : aplicarYAvanzar()
SagaPrincipal ..> PuntoNoRetornoSuperadoException : cancelar() tras PASO7_HECHO
SagaPrincipal ..> OrdenYaCompletada : cancelar() en TERMINADA
ContextoTramitacion o-- RefsPropias
ContextoTramitacion o-- RefsComunes
ContextoTramitacion o-- DatosNegocioIdRef : datosNegocioId (id, no el\nagregado -- ver 26)

EstadoSagaPrincipal -[hidden]down- ComandoPasoPrincipal
ComandoPasoPrincipal -[hidden]down- ResultadoPasoPrincipal
@enduml
